network/iptables
# Generated by iptables-save v1.4.7 on Thu Jun 16 03:23:28 2016
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-t nat -A PREROUTING -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.32.16.222:3127 
-t nat -A PREROUTING -p tcp -m tcp --dport 80 -j DNAT --to-destination 10.32.16.222:3128 
-t nat -A POSTROUTING -j MASQUERADE
### perubahan pada -t nat di prerouting
COMMIT
# Completed on Thu Jun 16 03:23:28 2016
# Generated by iptables-save v1.4.7 on Thu Jun 16 03:23:28 2016
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [3455:321198]
:LOGGING - [0:0]
-A INPUT -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth0 -j ACCEPT
-A INPUT -p tcp -s 10.32.5.0/24 -j ACCEPT
-A INPUT -p tcp -s 10.32.15.0/24 -j ACCEPT
-A INPUT -p tcp -s 10.32.6.0/24 -j ACCEPT
-A INPUT -p tcp -s 10.32.7.0/24 -j ACCEPT
-A INPUT -p tcp -s 10.32.8.0/24 -j ACCEPT
-A INPUT -p tcp -s 10.32.9.0/24 -j ACCEPT
-A INPUT -p tcp -s 10.32.10.0/24 -j ACCEPT
-A INPUT -p tcp -s 10.32.11.0/24 -j ACCEPT
-A INPUT -p tcp -s 10.32.13.0/24 -j ACCEPT
-A INPUT -p tcp -s 10.32.14.0/24 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m multiport --dports 80,443,3127,3128,8081 -j ACCEPT
-A INPUT -p tcp -m state --state NEW,ESTABLISHED -m multiport --dports 3000,3001 -j ACCEPT

## Log the rest
-A INPUT -j LOGGING
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7 
-A LOGGING -m limit --limit 5/min -j LOG --log-prefix "Incoming Dropped: " --log-level 5
-A INPUT -j DROP

COMMIT
# Completed on Thu Jun 16 03:23:28 2016
